# sarien

./: .gitignore  Makefile  Makefile.cga  Makefile.dc  Makefile.dj  Makefile.in  Makefile.tc  Makefile.tc1  Makefile.wat  README  Rules.dj  Rules.in  Rules.wat  Sarien.DICE  Sarien.make  Version  configure.ac  configure.in
OSX-ProjectBuilder/: SarienApplication.h  SarienApplication.m  SarienAudio.c  SarienIcon.icns  SarienView.h  SarienView.m  SarienWindow.h  SarienWindow.m  main.h  main.m
OSX-ProjectBuilder/English.lproj/: InfoPlist.strings
OSX-ProjectBuilder/English.lproj/MainMenu.nib/: info.nib  keyedobjects.nib  objects.nib
OSX-ProjectBuilder/French.lproj/MainMenu.nib/: classes.nib  keyedobjects.nib  objects.nib
OSX-ProjectBuilder/Sarien.pbproj/: drz.pbxuser  project.pbxproj
VC++6.0/: Makefile  Sarien.dep  Sarien.dsp  Sarien.dsw  Sarien.mak
debian/: changelog  control  copyright  dirs  docs  rules
doc/: AUTHORS  BUGS  Changelog  Makefile  README.agi  README.amiga  README.dc  README.dga  README.djgpp  README.macos  README.mpw  README.palmos  README.pocketpc  README.ports  README.sdl  README.svgalib  README.turboc  README.unix  README.watcom  README.win32  TODO  agimouse.txt  agispecs.sgml  flowchart.dot  hackersguide.sgml  manpage.sgml  pdbspec.txt  roadmap.txt  sarien.doxygen
doc/images/hg/: input_mode.dia  input_mode.eps  key_handling.dia  key_handling.eps  key_menu.dia  key_menu.eps  main_loop.dia  main_loop.eps  reposition.dia  reposition.eps
eVC3/: Makefile  PocketSarien.rc  PocketSarien.vco  PocketSarien.vcp  browse.cpp  browse.h  portdefs.h  resource.h  sound_wince.c  wince.cpp  winmain.cpp
eVC3/gapi/: README
eVC3/missing/: missing.c
etc/: Makefile  sarien.cfg  sarien.nsi  sarien.spec  winres.rc
lib/: Makefile
rules/: Rules.go32  Rules.xmingw32
rulesets/: Makefile  Rules.cygwin  Rules.djgpp  Rules.mingw32  Rules.palmos
scripts/: Makefile  cflow2dot.pl  plotmem.pl
src/: .cvsignore  Makefile  agi.c  agi_v2.c  agi_v3.c  checks.c  console.c  fileglob.c  font.c  getopt.c  getopt1.c  graphics.c  graphics.h  hirespic.c  id.c  inv.c  keyboard.c  keyboard.h  list.h  logic.c  logic.h  lzw.h  main.c  motion.c  objects.c  palmdb.c  patches.c  picture.c  picview.c  portdefs.h  rand.c  rand.h  sarien.h  savegame.c  savegame.h  sdl.c  silent.c  sound.c  sprite.h  text.c  (+4 more)
src/core/: Makefile  Makefile.dj  Makefile.wat  agi.c  agi_v2.c  agi_v3.c  agi_v4.c  checks.c  cli.c  console.c  cycle.c  font.c  getopt.c  getopt1.c  gfx.c  gfx_agi.c  gfx_base.c  global.c  graphics.c  hirespic.c  id.c  iff.c  inv.c  keyboard.c  logic.c  lzw.c  main.c  menu.c  motion.c  objects.c  op_cmd.c  op_dbg.c  op_misc.c  op_test.c  palmdb.c  palmos.c  patches.c  picture.c  picview.c  rand.c  (+8 more)
src/core/dc/: Makefile  crown.h  dcmain.c  dcui.c  dcui.h  dcwrapper.c  font.c  gsi.c  gsi.h  gslogo.c  gslogo.h  image.h  portdefs.h  pvrutils.c  pvrutils.h  util.c  util.h
src/core/macos/: Makefile  library.c  main.c  portdefs.h  resource.h  sarien.r
src/core/macosx/: Makefile  SarienIcon.icns  main.c  main.m
src/core/palmos/: Makefile  sarien.c
src/core/win32/: Makefile  resource.h  sarien.info  winmain.c  winres.rc
src/fileglob/: Makefile
src/fileglob/msdos/: Makefile  Makefile.dj  Makefile.wat  fileglob.c  turboc.c
src/fileglob/unix/: Makefile  fileglob.c  fnmatch.c
src/fileglob/win32/: fileglob.c
src/filesys/: Makefile
src/filesys/amiga/: fileglob.c  path.c
src/filesys/dc/: Makefile  fileglob.c
src/filesys/macos/: Makefile  fileglob.c  path.c
src/filesys/msdos/: Makefile  Makefile.dj  Makefile.wat  fileglob.c  path.c  tcglob.c
src/filesys/palmos/: Makefile
src/filesys/unix/: Makefile  fileglob.c  path.c
src/filesys/win32/: Makefile  fileglob.c  path.c
src/graphics/: Makefile
src/graphics/aalib/: Makefile  aalib.c
src/graphics/allegro/: Makefile  Makefile.dj  allegro.c
src/graphics/amiga/: Makefile  amiga.c  amiga_keys.h  timer.c
src/graphics/cocoa/: Makefile  SarienApplication.h  SarienApplication.m  SarienView.h  SarienView.m  SarienWindow.h  SarienWindow.m  cocoa.h  cocoa.m
src/graphics/dc/: dc.c
src/graphics/directx/: Makefile  dx8.c
src/graphics/dive/: Makefile  dive.c
src/graphics/gtk/: Makefile  gtk.c
src/graphics/macos/: Makefile  macos.c
src/graphics/msdos/: Makefile  Makefile.dj  Makefile.wat  djgpp.c  djgpp.dep  djgpp.h  ibm.c  ibm.h  pccga.asm  pccga.c  pcvga.c  watcom.dep
src/graphics/nanox/: Makefile  nanox.c
src/graphics/palmos/: Makefile  sarien.c  sarien.rcp
src/graphics/photon/: Makefile  ph.c
src/graphics/script/: Makefile  README  demo2.script  script.c
src/graphics/sdl/: Makefile  sdl.c
src/graphics/svgalib/: Makefile  svgalib.c  svgalib.h
src/graphics/win32/: Makefile  win32.c
src/graphics/x11/: Makefile  dga.c  x11.c
src/include/: Makefile  agi.h  console.h  gfx.h  gfx_agi.h  gfx_base.h  graphics.h  iff.h  keyboard.h  logic.h  lzw.h  menu.h  objects.h  opcodes.h  palmdb.h  picture.h  portdefs.h  rand.h  sarien.h  savegame.h  scale2x.h  sound.h  sprite.h  text.h  view.h  win32.h  words.h
src/sound/: Makefile
src/sound/allegro/: Makefile  Makefile.dj  s_alleg.c
src/sound/alsa/: Makefile  sound_alsa.c
src/sound/amiga/: Makefile  sound_ahi.c  sound_amiga.c
src/sound/bsd/: Makefile  sound_bsd.c
src/sound/dart/: Makefile  sound_dart.c
src/sound/dc/: Makefile  dc.c
src/sound/dummy/: Makefile  Makefile.dj  Makefile.wat  dummy.c
src/sound/freebsd/: Makefile  sound_freebsd.c
src/sound/hpux/: Makefile  sound_hpux.c
src/sound/macos/: Makefile  sound_macos.c
src/sound/macosx/: Makefile  SarienAudio.c
src/sound/oss/: Makefile  sound_oss.c
src/sound/qnx/: Makefile  sound_qnx.c
src/sound/sdl/: Makefile  sound_sdl.c
src/sound/sgi/: Makefile  sound_sgi.c
src/sound/solaris/: Makefile  sound_solaris.c
src/sound/win32/: Makefile  sound_win32.c
src/tests/: Makefile  Makefile.tc  README  arith.c  flag.c  format.c  inv.c  orat.c  orat.h  picture.c  random.c  test.c  test.h
src/tests/data/: picture1.raw  picture1.res  picture2.raw  picture2.res  (+2 more)
src/utils/: Makefile  README
(+55 files in other folders)
